--- a/src/app/mj.tile-collection.component.css
+++ b/src/app/mj.tile-collection.component.css
@@ -3,5 +3,6 @@
 }
 
 .tile-field {
+  margin: 10px;
   position: relative;
 }
