--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "FreeSerif";
-  src: url("fonts/FreeSerif.ttf");
+  font-family: "FreeSerifNF";
+  src: url("fonts/FreeSerifNF.ttf");
 }
 
 body {
